Update RoseGarden & add discord replacement outputs